--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core/App.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core/App.config
@@ -53,5 +53,9 @@
     password = "P@ssw0rd"
     domain = "."
     >
+  <system.web>
+    <!-- this section is only needed for using the HttpClient/ActivitClient and can be left blank -->
+  </system.web>
+  <AppclusiveCredential username="Administrator" password="Swisscom$01" domain=".">
   </AppclusiveCredential>
 </configuration>
