--- a/src/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests/packages.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="biz.dfch.CS.Activiti.Client" version="1.1.1" targetFramework="net46" />
   <package id="biz.dfch.CS.Appclusive.Public" version="2.9.0" targetFramework="net46" />
   <package id="biz.dfch.CS.System.Utilities" version="2.0.1" targetFramework="net46" />
   <package id="log4net" version="2.0.5" targetFramework="net46" />
