--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core/log4net.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core/log4net.config
@@ -26,18 +26,18 @@
       <!-- An alternate output encoding can be specified -->
       <!-- <encoding value="unicodeFFFE" /> -->
       <layout type="log4net.Layout.PatternLayout">
-        <header value="[Header]" />
-        <footer value="[Footer]" />
-        <conversionPattern value="%date [%thread] %-5level %logger [%ndc] &lt;%property{auth}&gt; - %message%newline" />
+        <header value="[AppclusiveScheduler.START]" />
+        <footer value="[AppclusiveScheduler.STOP]" />
+        <conversionPattern value="%date|%level|%message%newline" />
       </layout>
       <!-- Alternate layout using XML			
 			<layout type="log4net.Layout.XMLLayout" /> -->
     </appender>
     <appender name="DebugAppender" type="log4net.Appender.DebugAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <header value="[Header]" />
-        <footer value="[Footer]" />
-        <conversionPattern value="[%thread] %-5level %logger [%ndc] &lt;%property{auth}&gt; - %message%newline" />
+        <header value="[AppclusiveScheduler.START]" />
+        <footer value="[AppclusiveScheduler.STOP]" />
+        <conversionPattern value="%date|%level|%message%newline" />
       </layout>
       <!-- Alternate layout using XML			
 			<layout type="log4net.Layout.XMLLayout" /> -->
@@ -175,16 +175,16 @@
       <level value="ALL" />
       <appender-ref ref="LogFileAppender" />
       <appender-ref ref="ConsoleAppender" />
-      <appender-ref ref="DebugAppender" />
+      <!--<appender-ref ref="DebugAppender" />-->
       <!-- <appender-ref ref="ADONetAppender_SqlServer" /> -->
       <!--<appender-ref ref="NetSendAppender" />-->
       <!-- <appender-ref ref="A" /> -->
     </root>
     <!-- Specify the level for some specific categories -->
-    <logger name="ConsoleApp.LoggingExample">
-      <!-- <appender-ref ref="B" /> -->
+    <!--<logger name="ConsoleApp.LoggingExample">
+      < !- - <appender-ref ref="B" /> - - >
       <level value="ALL" />
       <appender-ref ref="RollingLogFileAppender" />
-    </logger>
+    </logger>-->
   </log4net>
 </configuration>
