--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core/App.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core/App.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section 
+    <section
       name="AppclusiveCredential"
       type="biz.dfch.CS.Appclusive.Scheduler.Public.AppclusiveCredentialSection, biz.dfch.CS.Appclusive.Scheduler.Public"
       allowLocation="true"
       allowDefinition="Everywhere"
       />
-    </configSections>
+  </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
@@ -26,7 +26,7 @@
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-       <dependentAssembly>
+      <dependentAssembly>
         <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.6.4.0" newVersion="5.6.4.0" />
       </dependentAssembly>
@@ -48,14 +48,8 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <AppclusiveCredential
-    username = "Administrator"
-    password = "P@ssw0rd"
-    domain = "."
-    >
   <system.web>
     <!-- this section is only needed for using the HttpClient/ActivitClient and can be left blank -->
   </system.web>
-  <AppclusiveCredential username="Administrator" password="Swisscom$01" domain=".">
-  </AppclusiveCredential>
+  <AppclusiveCredential username="Administrator" password="P@ssw0rd" domain="." />
 </configuration>
