--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core.Tests/app.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core.Tests/app.config
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section 
+      name="TestEnvironment"
+      type="biz.dfch.CS.Appclusive.Scheduler.Core.Tests.TestEnvironmentSection, biz.dfch.CS.Appclusive.Scheduler.Core.Tests"
+      allowLocation="true"
+      allowDefinition="Everywhere"
+    />
+  </configSections>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
      <dependentAssembly>
@@ -27,4 +35,5 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
+  <TestEnvironment configSource="TestEnvironment.config" />
 </configuration>
