--- a/src/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests/app.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests/app.config
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section
+      name="TestEnvironment"
+      type="biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests.TestEnvironmentSection, biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests"
+      allowLocation="true"
+      allowDefinition="Everywhere"
+    />
+  </configSections>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -20,6 +28,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <TestEnvironment configSource="TestEnvironment.config" />
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
