Log4Net configuration
* changed default logging appender to `rollingLogFileAppender`

--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core/log4net.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core/log4net.config
@@ -6,28 +6,28 @@
   <log4net>
     <!-- Define some output appenders -->
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="rolling-log.txt" />
+      <file value="C:\Logs\AppclusiveScheduler.log" />
       <appendToFile value="true" />
       <maxSizeRollBackups value="10" />
-      <maximumFileSize value="100" />
+      <maximumFileSize value="104857600" />
       <rollingStyle value="Size" />
       <staticLogFileName value="true" />
       <layout type="log4net.Layout.PatternLayout">
-        <header value="[Header]" />
-        <footer value="[Footer]" />
-        <conversionPattern value="%date\%level|%message%newline" />
+        <header value="[AppclusiveScheduler.START]&#13;&#10;" />
+        <header value="[AppclusiveScheduler.STOP]&#13;&#10;" />
+        <conversionPattern value="%date|%level|%message%newline" />
       </layout>
     </appender>
     <appender name="LogFileAppender" type="log4net.Appender.FileAppender">
-      <file value="${TMP}\AppclusiveScheduler.log" />
+      <file value="C:\Logs\AppclusiveScheduler.log" />
       <!-- Example using environment variables in params -->
       <!-- <file value="${TMP}\log-file.txt" /> -->
       <appendToFile value="true" />
       <!-- An alternate output encoding can be specified -->
       <!-- <encoding value="unicodeFFFE" /> -->
       <layout type="log4net.Layout.PatternLayout">
-        <header value="[AppclusiveScheduler.START]" />
-        <footer value="[AppclusiveScheduler.STOP]" />
+        <header value="[AppclusiveScheduler.START]&#13;&#10;" />
+        <header value="[AppclusiveScheduler.STOP]&#13;&#10;" />
         <conversionPattern value="%date|%level|%message%newline" />
       </layout>
       <!-- Alternate layout using XML			
@@ -35,8 +35,8 @@
     </appender>
     <appender name="DebugAppender" type="log4net.Appender.DebugAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <header value="[AppclusiveScheduler.START]" />
-        <footer value="[AppclusiveScheduler.STOP]" />
+        <header value="[AppclusiveScheduler.START]&#13;&#10;" />
+        <header value="[AppclusiveScheduler.STOP]&#13;&#10;" />
         <conversionPattern value="%date|%level|%message%newline" />
       </layout>
       <!-- Alternate layout using XML			
@@ -55,27 +55,7 @@
         <conversionPattern value="%date|%level|%message%newline" />
       </layout>
     </appender>
-    <!-- Example of how to configure the AdoNetAppender		
-		<appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender" >			
-			<connectionString value="Driver={Microsoft Access Driver (*.mdb)};DBQ=C:\Work\cvs_root\log4net-1.2\access.mdb;UID=;PWD=;" />
-			<layout type="log4net.Layout.PatternLayout">				
-				<conversionPattern value="INSERT INTO Log ([Date],[Thread],[Level],[Logger],[Message]) VALUES ('%date','%thread','%level','%logger','%message')" />
-			</layout>
-		</appender> 
-		-->
-    <!-- 
-		<appender name="A" type="log4net.Appender.ForwardingAppender" >
-			<threshold value="WARN"/>			
-			<appender-ref ref="ConsoleAppender" />		
-		</appender>
-		<appender name="B" type="log4net.Appender.ForwardingAppender" >
-			<filter type="log4net.Filter.LevelRangeFilter">
-				<levelMin value="DEBUG"/>
-				<levelMax value="INFO"/>
-			</filter>
-			<appender-ref ref="ConsoleAppender" />
-		</appender> 
-		-->
+
     <!-- Example of how to configure the AdoNetAppender to connect to MS Access -->
     <appender name="ADONetAppender_Access" type="log4net.Appender.AdoNetAppender">
       <connectionString value="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=C:\Work\cvs_root\log4net-1.2\access.mdb;User Id=;Password=;" />
@@ -173,18 +153,8 @@
     <!-- Setup the root category, add the appenders and set the default level -->
     <root>
       <level value="ALL" />
-      <appender-ref ref="LogFileAppender" />
-      <appender-ref ref="ConsoleAppender" />
-      <!--<appender-ref ref="DebugAppender" />-->
-      <!-- <appender-ref ref="ADONetAppender_SqlServer" /> -->
-      <!--<appender-ref ref="NetSendAppender" />-->
-      <!-- <appender-ref ref="A" /> -->
-    </root>
-    <!-- Specify the level for some specific categories -->
-    <!--<logger name="ConsoleApp.LoggingExample">
-      < !- - <appender-ref ref="B" /> - - >
-      <level value="ALL" />
       <appender-ref ref="RollingLogFileAppender" />
-    </logger>-->
+      <appender-ref ref="ConsoleAppender" />
+    </root>
   </log4net>
 </configuration>
