--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core/log4net.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core/log4net.config
@@ -14,7 +14,7 @@
       <staticLogFileName value="true" />
       <layout type="log4net.Layout.PatternLayout">
         <header value="[AppclusiveScheduler.START]&#13;&#10;" />
-        <header value="[AppclusiveScheduler.STOP]&#13;&#10;" />
+        <footer value="[AppclusiveScheduler.STOP]&#13;&#10;" />
         <conversionPattern value="%date|%level|%message%newline" />
       </layout>
     </appender>
@@ -27,7 +27,7 @@
       <!-- <encoding value="unicodeFFFE" /> -->
       <layout type="log4net.Layout.PatternLayout">
         <header value="[AppclusiveScheduler.START]&#13;&#10;" />
-        <header value="[AppclusiveScheduler.STOP]&#13;&#10;" />
+        <footer value="[AppclusiveScheduler.STOP]&#13;&#10;" />
         <conversionPattern value="%date|%level|%message%newline" />
       </layout>
       <!-- Alternate layout using XML			
@@ -36,7 +36,7 @@
     <appender name="DebugAppender" type="log4net.Appender.DebugAppender">
       <layout type="log4net.Layout.PatternLayout">
         <header value="[AppclusiveScheduler.START]&#13;&#10;" />
-        <header value="[AppclusiveScheduler.STOP]&#13;&#10;" />
+        <footer value="[AppclusiveScheduler.STOP]&#13;&#10;" />
         <conversionPattern value="%date|%level|%message%newline" />
       </layout>
       <!-- Alternate layout using XML			
