--- a/src/biz.dfch.CS.Appclusive.Scheduler.Extensions/packages.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Extensions/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="biz.dfch.CS.Activiti.Client" version="1.1.1" targetFramework="net46" />
   <package id="biz.dfch.CS.Appclusive.Api" version="2.8.0" targetFramework="net46" />
-  <package id="biz.dfch.CS.Appclusive.Public" version="2.9.0" targetFramework="net46" />
+  <package id="biz.dfch.CS.Appclusive.Public" version="2.15.1" targetFramework="net46" />
   <package id="biz.dfch.CS.System.Utilities" version="2.0.1" targetFramework="net46" />
   <package id="log4net" version="2.0.5" targetFramework="net46" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net46" />
@@ -11,5 +11,7 @@
   <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net46" />
   <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="System.Management.Automation" version="6.1.7601.17515" targetFramework="net46" />
+  <package id="System.Management.Automation.dll" version="10.0.10586.0" targetFramework="net46" />
   <package id="System.Spatial" version="5.6.4" targetFramework="net46" />
 </packages>
