--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core/App.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core/App.config
@@ -22,6 +22,7 @@
     <add key="ExternalWorkflowManagementUriName" value="biz.dfch.PS.Activiti.Client.Setting" />
     <!-- this entry is needed by the PowerShellScript/PowerShell plugin -->
     <add key="PowerShellScriptManagementUriName" value="biz.dfch.CS.Appclusive.Scheduler.Plugins.PowerShellScript" />
+    <add key="PowerShellScriptScriptBase" value="%ProgramFiles%" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
