--- a/src/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests.csproj
@@ -195,6 +195,8 @@
     <Compile Include="ActivitiPluginConfigurationManagerTest.cs" />
     <Compile Include="ActivitiPluginConfigurationTest.cs" />
     <Compile Include="ActivitiPluginTest.cs" />
+    <Compile Include="ThreadPoolUserWorkItemTest.cs" />
+    <Compile Include="ThreadPoolUserWorkItemParametersTest.cs" />
     <None Include="PowerShellScriptPluginTest.ps1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
