--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core/App.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core/App.config
@@ -16,7 +16,7 @@
     <add key="ServerNotReachableRetries" value="4" />
     <add key="ManagementUri" value="biz.dfch.CS.Appclusive.Scheduler" />
     <add key="Uri" value="http://172.19.115.33/Appclusive/" />
-    <add key="ExtensionsFolder" value="..\..\..\biz.dfch.CS.Appclusive.Scheduler.Extensions\bin\Debug" />
+    <add key="ExtensionsFolder" value="..\..\..\..\biz.dfch.CS.Appclusive.Scheduler.Extensions\bin\x64\Debug" />
     <add key="PluginTypes" value="*" />
     <!-- this entry is needed by the ExternalWorkflow/Activiti plugin -->
     <add key="ExternalWorkflowManagementUriName" value="biz.dfch.PS.Activiti.Client.Setting" />
