--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core.Tests/packages.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core.Tests/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="biz.dfch.CS.Appclusive.Api" version="2.8.0" targetFramework="net46" />
-  <package id="biz.dfch.CS.Appclusive.Public" version="2.17.0" targetFramework="net46" />
+  <package id="biz.dfch.CS.Activiti.Client" version="1.1.1" targetFramework="net46" />
+  <package id="biz.dfch.CS.Appclusive.Api" version="4.3.0" targetFramework="net46" />
+  <package id="biz.dfch.CS.Appclusive.Public" version="3.7.5" targetFramework="net46" />
   <package id="biz.dfch.CS.System.Utilities" version="2.0.1" targetFramework="net46" />
   <package id="log4net" version="2.0.5" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net46" />
