Updated .NET runtime version to 4.6.1
* updated .NET runtime version to 4.6.1

--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core/App.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section
@@ -9,51 +9,51 @@
       />
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
   </startup>
   <appSettings>
-    <add key="UpdateIntervalMinutes" value="5" />
-    <add key="ServerNotReachableRetries" value="4" />
-    <add key="ManagementUri" value="biz.dfch.CS.Appclusive.Scheduler" />
-    <add key="Uri" value="http://172.19.115.33/Appclusive/" />
-    <add key="ExtensionsFolder" value="..\..\..\..\biz.dfch.CS.Appclusive.Scheduler.Extensions\bin\x64\Debug" />
-    <add key="PluginTypes" value="*" />
+    <add key="UpdateIntervalMinutes" value="5"/>
+    <add key="ServerNotReachableRetries" value="4"/>
+    <add key="ManagementUri" value="biz.dfch.CS.Appclusive.Scheduler"/>
+    <add key="Uri" value="http://172.19.115.33/Appclusive/"/>
+    <add key="ExtensionsFolder" value="..\..\..\..\biz.dfch.CS.Appclusive.Scheduler.Extensions\bin\x64\Debug"/>
+    <add key="PluginTypes" value="*"/>
     <!-- this entry is needed by the ExternalWorkflow/Activiti plugin -->
-    <add key="ExternalWorkflowManagementUriName" value="biz.dfch.PS.Activiti.Client.Setting" />
+    <add key="ExternalWorkflowManagementUriName" value="biz.dfch.PS.Activiti.Client.Setting"/>
     <!-- this entry is needed by the PowerShellScript/PowerShell plugin -->
-    <add key="PowerShellScriptManagementUriName" value="biz.dfch.CS.Appclusive.Scheduler.Plugins.PowerShellScript" />
-    <add key="PowerShellScriptScriptBase" value="%ProgramFiles%" />
+    <add key="PowerShellScriptManagementUriName" value="biz.dfch.CS.Appclusive.Scheduler.Plugins.PowerShellScript"/>
+    <add key="PowerShellScriptScriptBase" value="%ProgramFiles%"/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.6.4.0" newVersion="5.6.4.0" />
+        <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.6.4.0" newVersion="5.6.4.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.2.15.0" newVersion="1.2.15.0" />
+        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.2.15.0" newVersion="1.2.15.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Data.Services.Client" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.6.4.0" newVersion="5.6.4.0" />
+        <assemblyIdentity name="Microsoft.Data.Services.Client" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.6.4.0" newVersion="5.6.4.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.6.4.0" newVersion="5.6.4.0" />
+        <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.6.4.0" newVersion="5.6.4.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.web>
     <!-- this section is only needed for using the HttpClient/ActivitClient and can be left blank -->
   </system.web>
-  <AppclusiveCredential username="Administrator" password="P@ssw0rd" domain="." />
+  <AppclusiveCredential username="Administrator" password="P@ssw0rd" domain="."/>
 </configuration>
