--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core/biz.dfch.CS.Appclusive.Scheduler.Core.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core/biz.dfch.CS.Appclusive.Scheduler.Core.csproj
@@ -119,6 +119,7 @@
     <CodeContractsRuntimeCheckingLevel>Full</CodeContractsRuntimeCheckingLevel>
     <CodeContractsAnalysisWarningLevel>0</CodeContractsAnalysisWarningLevel>
     <CodeContractsReferenceAssembly>Build</CodeContractsReferenceAssembly>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject />
